Changed Text, fixed animation

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
   <body>
     <main class="mdl-layout__content red-gradient" id="content">
-      <div class="page-content" style="width: 100vw;">
+      <div class="page-content" style="width: 100vw; height: 100vh;">
 
         <div id="logo-div" class="animated fadeOutUp">
           <center><img src="images/CodetLogo.jpg" style="height: 100vh;"></center>
@@ -98,12 +98,13 @@
 
         <center>
           <h1
-            class="mb-3 text-white animated bounceIn slow"
+            class="mb-3 text-white"
             style="font-size: 110px; margin-top: 50px; line-height: 90%;"
           >
-            Codet Summer Camp
+            <strong class="animated fadeInUp slower" style="font-size: 130px;">CODET</strong><br> <span class="animated fadeInUp delay-1s" data-wow-delay="0.2s">Summer Camp</span>
           </h1>
         </center>
+
 
         
     </main>
