--- a/index.html
+++ b/index.html
@@ -85,6 +85,37 @@
         z-index: 100;
         animation-delay: 0.2s;
       }
+
+      #sign-up-btn {
+		width: 100px;
+		height: 50px;
+		-webkit-transition: width 1s, height 1s, font-size 1s; /* Safari */
+		transition: width 1s, height 1s, font-size 1s;
+		font-size: 15px;
+		margin-top: 30px;
+	  }
+
+	  #sign-up-btn:hover {
+		width: 200px;
+		height: 100px;
+		font-size: 25px;
+	  }
+
+	  #info-btn {
+		width: 120px;
+		height: 50px;
+		-webkit-transition: width 1s, height 1s, font-size 1s; /* Safari */
+		transition: width 1s, height 1s, font-size 1s;
+		font-size: 15px;
+		margin-top: 50px;
+	  }
+
+	  #info-btn:hover {
+		width: 240px;
+		height: 100px;
+		font-size: 25px;
+	  }
+
     </style>
   </head>
 
@@ -105,7 +136,13 @@
           </h1>
         </center>
 
+        <center><a href="https://ttonyxx.github.io/CodetCamp" target="_blank"><button id="info-btn" class="animated fadeInUp delay-1s mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+		  More Info
+		</button></a></center>
 
+        <center><a href="http://tinyurl.com/codetcamp" target="_blank"><button id="sign-up-btn" class="animated fadeInUp delay-1s mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+		  Sign Up
+		</button></a></center>
         
     </main>
 
