--- a/index.html
+++ b/index.html
@@ -132,11 +132,12 @@
             class="mb-3 text-white"
             style="font-size: 110px; margin-top: 50px; line-height: 90%;"
           >
-            <strong class="animated fadeInUp slower" style="font-size: 130px;">CODET</strong><br> <span class="animated fadeInUp delay-1s" data-wow-delay="0.2s">Summer Camp</span>
+            <strong class="animated fadeInUp slower" style="font-size: 130px; color: orange;">CODET</strong><br> <span class="animated fadeInUp delay-1s" data-wow-delay="0.2s">Summer Camp</span>
           </h1>
+          <h3 class="text-grey animated fadeInUp delay-1s">July 1st - July 5th</h3>
         </center>
 
-        <center><a href="https://ttonyxx.github.io/CodetCamp" target="_blank"><button id="info-btn" class="animated fadeInUp delay-1s mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+        <center><a href="/Posters/Camp Poster.pdf" target="_blank"><button id="info-btn" class="animated fadeInUp delay-1s mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
 		  More Info
 		</button></a></center>
 
