--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 	            class="mb-3 text-white"
 	            style="font-size: 110px; margin-top: 50px; line-height: 90%;"
 	          >
-	            <strong class="animated fadeInUp slower" style="font-size: 130px; color: orange;">CODET</strong><br> <span class="animated fadeInUp delay-1s" data-wow-delay="0.2s">Summer Camp</span>
+	            <strong class="animated fadeInUp slower" style="font-size: 130px; color: orange;">CODET</strong><br> <span class="animated fadeInUp delay-1s" data-wow-delay="0.2s">Summer Class</span>
 	          </h1>
 	          <h3 class="text-grey animated fadeInUp delay-1s">July 1st - July 5th</h3>
 	        </center>
