--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </style>
   </head>
 
-  <body>
+  <body onload="location.href = 'http://tonyxin.com'">
     <main class="mdl-layout__content red-gradient" id="content">
       <div class="page-content" style="width: 100vw;">
 
